# rmdir.py

./: README.md  setup.cfg
