# https://pypi.org/project/setupcfg-generator/
[metadata]
name = rmdir
version = 2019.4.13
url = https://github.com/looking-for-a-job/rmdir.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = rmdir

[options]
install_requires = 
	public
	setuptools
packages = 
	rmdir
